--- a/tex/S3_L/S3_L_Microprocessor/report2/S3_L_Microprocessor_2.tex
+++ b/tex/S3_L/S3_L_Microprocessor/report2/S3_L_Microprocessor_2.tex
@@ -14,7 +14,7 @@
   
 % 実験の背景と意義、レポートの構成などを記述
  \section{はじめに}
-  デジタル信号は0と1の信号の組み合わせでできている。各信号が0と1の2値であるが、現代のデジタル機器では幅広い数値を表現することができる。つまり離散的な値の組み合わせで、見掛け上連続的な幅を表現できるということになる。
+  デジタル信号は0と1の信号の組み合わせでできている。各信号が0と1の2値であるが、現代のデジタル機器では幅広い数値を表現することができる。つまり離散的な値の組み合わせで、見かけ上連続的な幅を表現できるということになる。
   
   ここでは、このコンピュータのシステムを演算装置(ALU)から、Z80コンピュータシステムや入出力制御までを通して理解することを目的とする。
   
@@ -33,11 +33,39 @@
   \subsection{Z80}
    
    \subsubsection{目的}
-   はじめに行うのはZ80の演算命令に対する挙動観察である。つまりあるプログラムを実行させるときに、実際コンピュータはどのようにそのメモリ、レジスタ、そしてスタックなどを理容しているのかを、デバッガーを用いて1命令ごとにトレースしていく。
+   はじめに行うのはZ80の演算命令に対する挙動観察である。つまりあるプログラムを実行させるときに、実際コンピュータはどのようにそのメモリ、レジスタ、そしてスタックなどを利用しているのかを、デバッガーを用いて1命令ごとにトレースしていく。
    
    それがこの実験の目的であり、以下、必要な主な原理を述べる。
    
-   \subsubsection{}
+   \subsubsection{アセンブリの命令}
+   実験中で使われるいくつかのアセンブリの命令を以下に載せる。
+   
+   \begin{itemize}
+   \item PUSH qq
+   \begin{eqnarray}
+   SP - 1 &=& qq_H \nonumber \\
+   SP - 2 &=& qq_L \nonumber \\
+   SP &=& SP - 2 \nonumber
+   \end{eqnarray}
+   \item CALL nn
+   \begin{eqnarray}
+   SP - 1 &=& PC_H \nonumber \\
+   SP - 2 &=& PC_L \nonumber \\
+   SP &=& SP - 2 \nonumber \\
+   PC = nn \nonumber
+   \end{eqnarray}
+   \item POP qq
+   \begin{eqnarray}
+   qq_L &=& SP \nonumber \\
+   qq_H &=& SP + 1 \nonumber \\
+   SP &=& SP + 2 \nonumber
+   \end{eqnarray}
+   \item DEC dd
+   \begin{eqnarray}
+   dd = dd - 1 \nonumber
+   \end{eqnarray}
+   
+   \end{itemize}
    
    
   \subsection{入出力制御}
@@ -49,30 +77,91 @@
    
    ここではスイッチ入力によるLED出力の制御、及び周波数入力によるスピーカ出力の制御により入出力制御を学ぶ。
    
-   \subsubsection{}
+   \subsubsection{入出力制御のアセンブリ}
+   入出力制御において外部の装置からの入力情報を得るとき、もしくは出力情報を送るとき、以下の２つのアセンブリが使われる。
+   \begin{itemize}
+   \item IN r, (C) : Cレジスタの内容が示す入力ポート番号からの1杯とのデータをrレジスタへ入れる。
+   \item OUT (C), r : rレジスタの内容をCレジスタのないようが示す出力ポート番号へ出力する。
+   \end{itemize}
   
   
 % 実験の手順を順次説明
  \section{実験内容}
-  
+  ここではZ80および入出力制御の実験に関して、それを学習するためのサンプルコードをトレースするいくつかの実験課題を設け、次節の「実験結果」でその観測結果を示す。
   \subsection{実験課題2.Z80の演算命令、フラグ、条件分岐及びサブルーチン実行時の観察}
-  
-   \subsubsection{実験課題2-1.テストプログラムによる動作検証}
-   
-   
+  まずZ80コンピュータシステムに関する実験を行った。実験課題は主に、演算命令、条件分岐などに対するメモリやフラグの使用用途を観察するものとなっている。
+
    \subsubsection{実験課題2-2.演算命令及びフラグの観察}
+   演算命令実行時にメモリ・フラグがどのように使用されているかを観察するサンプルコードを作成し、トレース。
+   \begin{enumerate}
+   \item 表\ref{tab:tejun2-2}に示すex01.hexプログラムを作成、コンパイルさせた後読込。
+   \item メモリのA000H番地にB0を代入し、デバッガーを用いてプログラムをトレース。
+   \end{enumerate}
+   
+   
+   \begin{table}[htb]
+  \begin{center}
+    \caption{ex01.asmアセンブリコード}
+    \begin{tabular}{|l|l|ll|c|c|c|c|c|} \hline
+番地 & 機械語 & \multicolumn{2}{|c|}{アセンブリ} & Aレジスタの内容 & S & Z & P/V & C \\ \hline
+8000 & 3A 00 A0 & LD & A, (A000H) & B0H & 0 & 0 & 0 & 0 \\ \hline
+8003 & C6 80 & ADD & A, 80H & 30H & 0 & 0 & 1 & 1 \\ \hline
+8005 & CB 2F & SRA & A & 18H & 0 & 0 & 1 & 0 \\ \hline
+8007 & CB 27 & SLA & A & 30H & 0 & 0 & 1 & 0 \\ \hline
+8009 & 37 & SCF &  & 30H & 0 & 0 & 1 & 1 \\ \hline
+800A & CE 07 & ADC & A, 07H & 38H & 0 & 0 & 0 & 0 \\ \hline
+800C & E6 F0 & AND & F0H & 30H & 0 & 0 & 0 & 0 \\ \hline
+800E & CB FF & SET & 7, A & B0H & 0 & 0 & 0 & 0 \\ \hline
+8010 & CB 0F & RRC & A & 58H & 0 & 0 & 0 & 0 \\ \hline
+8012 & CB 07 & RLC & A & B0H & 0 & 0 & 0 & 0 \\ \hline
+    \end{tabular}
+    \label{tab:tejun2-2}
+  \end{center}
+ \end{table}
+   
    
    
    \subsubsection{実験課題2-3.フラグ、条件分岐及びサブルーチン実行時の観察}
+   フラグによる条件分岐の扱いとサブルーチンの動きを見るためのサンプルコードを作成し、フラグとプログラムの挙動の関係を観察。
+   \begin{enumerate}
+   \item 表\ref{tab:tejun2-2}に示すプログラムコードを作成、コンパイルの後、読み込み。
+   \item メモリのB000H番地にA8A8を代入し、デバッガーを用いてプログラムをトレース。
+   \end{enumerate}
    
    
-  
+   \begin{table}[htb]
+  \begin{center}
+    \caption{ex02.asm}
+    \begin{tabular}{|lll|} \hline
+ & ORG & 8000H \\
+ & LD & SP, 0D000H \\
+ & LD & HL, 0 \\
+ & LD & B, 2 \\
+LOOP: & PUSH & BC \\
+ & CALL & KEISAN \\
+ & DEC & B \\
+ & JP & NZ, LOOP \\
+ & JP & KAKUNO \\
+KEISAN: & POP & DE \\
+ & LD & BC, (0B000H) \\
+ & ADD & HL, BC \\
+ & POP & BC \\
+ & PUSH & DE \\
+ & RET &  \\
+KAKUNO: & LD & (0C000H), HL \\
+ & END &  \\ \hline
+    \end{tabular}
+    \label{tab:tejun2-3}
+  \end{center}
+ \end{table}
+   
+   
   \subsection{実験課題3.入出力制御}
-  
+  次に入出力制御に関する実験ではスイッチとLED、及びスピーカにおける入出力の挙動を観測する実験課題を設け、それを以下の手順で行った。
    \subsubsection{実験課題3-1.スイッチ入力とLEDの制御}
    ここではスイッチ入力に対するLEDの出力制御を行った。
    \begin{enumerate}
-   \item 表\ref{tab:junbi3-1}のアセンブリのコードを作成、コンパイルの後、デバッガーでトレースする。
+   \item 表\ref{tab:tejun3-1}のアセンブリのコードを作成、コンパイルの後、デバッガーでトレースする。
    \end{enumerate}
    
    \begin{table}[htb]
@@ -89,79 +178,198 @@ KURIKAE: & IN & A, (C) & ;SWO-7からデータを入力 \\
 OWARI: & NOP &  & ;ブレークポイント設定位置 \\
  & END &  & ; \\ \hline
     \end{tabular}
-    \label{tab:junbi3-1}
+    \label{tab:tejun3-1}
   \end{center}
  \end{table}
    
    \subsubsection{実験課題3-2.スピーカの制御}
    音の高さと長さを読み込み、それを元にスピーカーで音を発生。さらに繰り返し実行による高さ・長さそれぞれの増加も出力に反映。
    \begin{enumerate}
-   \item 表
+   \item 表\ref{tab:tejun3-2}のスピーカ制御のアセンブリコードを作成、コンパイル。
    \item PCレジスタを7000Hに設定。
-   \item 8F10H番地に音の高さの初期値を入力。
-   \item 8F12H番地に音の高さの増分を入力。
-   \item 8F14H番地に音の長さの初期値を入力。
-   \item 8F16H番地に音の長さの増分を入力。
-   \item 2～5の入力値を適当に変更させながら、スピーカーから発生する音の高さの聞こえる周波数範囲を測定。
-   \item 2～5の入力値を適当に変更させながら、
+   \item 入力の際には、8F10H番地に音の高さの初期値を、8F12H番地に音の高さの増分を、8F14H番地に音の長さの初期値を、8F16H番地に音の長さの増分を入力。
+   \item 入力値を適当に変更させながら、スピーカーから発生する音の高さの聞こえる周波数範囲を測定。
+   \item 入力値を適当に変更させながら、音の聞こえる範囲内で適当に5点の周波数を選び、それぞれに対して音の長さを5点変化させてパルス幅と継続時間との関係を測定。
    \end{enumerate}
    
    \begin{table}[htb]
   \begin{center}
-    \caption{}
+    \caption{スピーカ制御のアセンブリコード}
     \begin{tabular}{|llll|} \hline
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\
- &  &  &  \\ \hline
+ &ORG  & 7000H & ;プログラム開始番地 \\
+MAIN: &LD  & BC, (8F14H) & ;音の長さを設定 \\
+ & CALL &OTODASU  & 設定高さの音を長さ分高くし続ける \\
+ & CALL & FUYASU & 音の高さと長さを設定した増分ずつ増やす \\
+ &JP  &MAIN  & ;新しい長さ及び高さで音を鳴らす(ブレークポイント設定位置) \\
+WAIT: &CPD  &  & 1周期分かぞえる \\
+ & JP &PE, WAIT  &  1周期経過していなければ、待つ\\
+ & RET &  & 音を出すサブルーチン意戻る \\
+OTODASU: &CPD  &  & ;繰り返し回数(持続時間)で減らす \\
+ & PUSH &AF  & 繰り返し回数カウンターをスタックに退避 \\
+ & PUSH & BC & 音の長さをスタックに退避 \\
+ & LD & A, 0 & ;出力データセット \\
+ & OUT & (50H), A & ;スピーカに出力 \\
+ &LD  &BC, (8F10H)  & ;音の高さ(周期)を設定 \\
+ &CALL  &WAIT  & ;待ち時間(音の高さ) \\
+ & LD & A, 1 & 出力データリセット \\
+ & OUT & (50H), A & スピーカの出力 \\
+ & LD & BC, (8F10H) & 音の高さ(周期)変更 \\
+ & CALL & WAIT & 待ち時間 \\
+ & POP & BC & 音の長さ情報をスタックから呼び出す \\
+ &POP  & AF & 繰り返し回数カウンターをスタックから呼び出す \\
+ &JP  & PE, OTODASU & 設定した音の長さ分経過していなければ、音を出す \\
+ & RET &  & ;同じ回数でも高さが異なると周期が違うため長さは変わる \\
+FUYASU: & LD & HL, (8F10H) & ;音の高さの読み出し \\
+ & LD & BC, (8F12H) & ;音の高さの増分を読み出し \\
+ & ADD & HL, BC & ;音の高さを増やす \\
+ & LD & (8F10H), HL & ;音の高さを書き込み \\
+ & LD & HL, (8F14H) & ;音の長さを読み出し \\
+ & LD & BC, (8F16H) & ;音の長さの増分を読み出し \\
+ & ADD & HL, BC & ;音の長さを増やす \\
+ & LD & (8F14H), HL & ;音の長さを書き込み \\
+ & RET &  & メインプログラムに戻る \\
+ & END &  & プログラム終了 \\ \hline
     \end{tabular}
-    \label{}
+    \label{tab:tejun3-2}
   \end{center}
  \end{table}
    
   
+  \clearpage
   
   
 % 図や表による実験データの添付、またそれらの説明を記載
  \section{実験結果}
-  
+  本節では前節の実験内容の観測結果を示す。
   \subsection{実験課題2.Z80の演算命令、フラグ、条件分岐及びサブルーチン実行時の観察}
-   \subsubsection{実験課題2-1.テストプログラムによる動作検証}
-   
-   
    \subsubsection{実験課題2-2.演算命令及びフラグの観察}
    
+   表\ref{tab:kekka2-2}に演算命令に対するフラグの働きを見るサンプルプログラムex01.asmの実行結果を示す。なお、実験内容で事前予想を示した表\ref{tab:tejun2-2}と異なるデータは表中その横に*を記して分かるようにしている。
+   
+   \begin{table}[htb]
+  \begin{center}
+    \caption{ex01.asmの実行結果}
+    \begin{tabular}{|l|l|ll|c|c|c|c|c|} \hline
+番地 & 機械語 & \multicolumn{2}{|c|}{アセンブリ} & Aレジスタの内容 & S & Z & P/V & C \\ \hline
+8000 & 3A 00 A0 & LD & A, (A000H) & B0H & 0 & 0 & 0 & 0 \\ \hline
+8003 & C6 80 & ADD & A, 80H & 30H & 0 & 0 & 1 & 1 \\ \hline
+8005 & CB 2F & SRA & A & 18H & 0 & 0 & 1 & 0 \\ \hline
+8007 & CB 27 & SLA & A & 30H & 0 & 0 & 1 & 0 \\ \hline
+8009 & 37 & SCF &  & 30H & 0 & 0 & 1 & 1 \\ \hline
+800A & CE 07 & ADC & A, 07H & 38H & 0 & 0 & 0 & 0 \\ \hline
+800C & E6 F0 & AND & F0H & 30H & 0 & 0 & 0 & 0 \\ \hline
+800E & CB FF & SET & 7, A & B0H & 0 & 0 & 1* & 0 \\ \hline
+8010 & CB 0F & RRC & A & 58H & 0 & 0 & 0 & 0 \\ \hline
+8012 & CB 07 & RLC & A & B0H & 1* & 0 & 0 & 0 \\ \hline
+    \end{tabular}
+    \label{tab:kekka2-2}
+  \end{center}
+ \end{table}
+   
+   なお見やすさのため、ここでプログラムの行ごとに、以下でトレースの結果を述べる。後の考察課題の解答とする。
+   \begin{enumerate}
+   \item この命令はAレジスタにA00Hを代入するもので、Aレジスタのみ変化。
+   \item Aレジスタに16進数で80を加算。加算命令による桁上げが起こっているためCとVフラグが1となっている。
+   \item Aレジスタの内容を右に1つシフト。論理演算により偶数パリティとなっているため、Pフラグが立っている。
+   \item Aレジスタの内容を左に1つシフト。論理演算により偶数パリティとなっているため、Pフラグが立っている。
+   \item キャリーフラグを立たせる論理演算。4行めと同様に論理演算で偶数パリティとなっているため、PフラグとCフラグが立っている。
+   \item Aレジスタに07Hを加算後、Cフラグが立っているためにさらに最下位ビットに1を加えている。
+   \item AレジスタとF0との論理積の結果をAレジスタに代入。フラグはなし。
+   \item Aレジスタの7ビットめを1に変化させている。この論理演算後に偶数パリティとなっているため、Pフラグが立っている。
+   \item Aレジスタの内容を右に1ビットシフト。ここでは実行前のキャリーは0で、元のAレジスタの最下位ビットも0だったため、実行後のCフラグも0。
+   \item Aレジスタを左に1ビットシフト。9行めと同様にキャリーフラグなどは立たないが、最上位ビットが0から1になったため、Sフラグが立っている。
+   \end{enumerate}
    
    \subsubsection{実験課題2-3.フラグ、条件分岐及びサブルーチン実行時の観察}
    
+   表\ref{tab:kekka2-3}に条件分岐、サブルーチン時のメモリ及びフラグの使用状況を見るサンプルプログラムの実行結果を示す。
+   
+   \begin{table}[htb]
+  \begin{center}
+    \caption{ex02.asmの実行結果}
+    \begin{tabular}{|c|ll|c|c|c|c|c|c|c|c|c|} \hline
+番地 & \multicolumn{2}{|c|}{アセンブリ} & BC & DE & HL & SP & S & Z & V & C & PC \\ \hline
+8000 & LD & SP, 0D00H & 0000 & 0000 & 0000 & D000 & 0 & 0 & 0 & 0 & 8003 \\ \hline
+8003 & LD & HL, 0 & 0000 & 0000 & 0000 & D000 & 0 & 0 & 0 & 0 & 8006 \\ \hline
+8006 & LD & B, 2 & 0200 & 0000 & 0000 & D000 & 0 & 0 & 0 & 0 & 8008 \\ \hline
+8008 & PUSH & BC & 0200 & 0000 & 0000 & CFFE & 0 & 0 & 0 & 0 & 8009 \\ \hline
+8009 & CALL & 8013 & 0200 & 0000 & 0000 & CFFE & 0 & 0 & 0 & 0 & 8013 \\ \hline
+8013 & POP & DE & 0200 & 0000 & 0000 & CFFE & 0 & 0 & 0 & 0 & 8014 \\ \hline
+8014 & LD & BC, (0B00H) & A8A8 & 800C & 0000 & CFFE & 0 & 0 & 0 & 0 & 8018 \\ \hline
+8018 & ADD & HL, BC & A8A8 & 800C & A8A8 & CFFE & 0 & 0 & 0 & 0 & 8019 \\ \hline
+8019 & POP & BC & 0200 & 800C & A8A8 & D000 & 0 & 0 & 0 & 0 & 801A \\ \hline
+801A & PUSH & DE & 0200 & 800C &A8A8  & CFFE & 0 & 0 & 0 & 0 & 801B \\ \hline
+801B & RET &  & 0200 & 800C & A8A8 & D000 & 0 & 0 & 0 & 0 & 800C \\ \hline
+800C & DEC & B & 0100 & 800C & A8A8 & D000 & 0 & 0 & 0 & 0 & 800D \\ \hline
+800D & JP & NZ, 8008H & 0100 & 800C & A8A8 & D000 & 0 & 0 & 0 & 0 & 8008 \\ \hline
+8008 & PUSH & BC & 0100 & 800C &A8A8  & CFFE & 0 & 0 & 0 & 0 & 8009 \\ \hline
+8009 & CALL & 8013H & 0100 & 800C & A8A8 & CFFC & 0 & 0 & 0 & 0 & 8013 \\ \hline
+8013 & POP & DE & 0100 & 800C & A8A8 & CFFE & 0 & 0 & 0 & 0 & 8014 \\ \hline
+8014 & LD & BC, (0B00H) & A8A8 & 800C &A8A8  & CFFE & 0 & 0 & 0 & 0 & 8018 \\ \hline
+8018 & ADD & HL, BC & A8A8 & 5150 & A8A8 & CFFE & 0 & 0 & 0 & 1 & 8019 \\ \hline
+8019 & POP & BC & 0100 & 5150 &A8A8  & D000 & 0 & 0 & 0 & 1 & 801A \\ \hline
+801A & PUSH & DE & 0100 & 5150 & A8A8 & CFFE & 0 & 0 & 0 & 1 & 801B \\ \hline
+801B & RET &  & 0100 & 5150 &A8A8  & D000 & 0 & 0 & 0 & 1 & 800C \\ \hline
+800C & DEC & B & 0000 & 5150 & A8A8 & D000 & 0 & 1 & 0 & 1 & 800D \\ \hline
+800D & JP & NZ, 8008H & 0000 & 5150 & A8A8 & D000 & 0 & 1 & 0 & 1 & 8010 \\ \hline
+8010 & JP & 801CH & 0000 & 5150 & A8A8 & D000 & 0 & 1 & 0 & 1 & 801C \\ \hline
+801C & LD & (0C000H), HL & 0000 & 5150 & A8A8 & D000 & 0 & 1 & 0 & 1 & 801F \\ \hline
+    \end{tabular}
+    \label{tab:kekka2-3}
+  \end{center}
+ \end{table}
+   
+   なお、各命令のトレース結果を命令のプログラム行数順に、以下に述べる。
+   \begin{enumerate}
+   \item SPにD000を代入。
+   \item HLに0を代入。
+   \item Bに2を代入。 
+   \item BCの値をスタックに退避。
+   \item 現在の番地をスタックに退避させた後、8013H番地に移動。 
+   \item CALL前の番地を一旦、DEへ退避。
+   \item BCに学生番号の下4桁(3176)の10進数の先頭に4をつけた数を16進数に変換した数(A8A8)を入れたB000番地の内容を代入。
+   \item HLにBCの値を加える。
+   \item CALL前にスタックに退避させていたBCの値を取り出し、再度BCに代入。
+   \item 一旦DEに退避させていたCALL前の番地をスタックに保存。
+   \item スタックにあるCALL前の番地を呼び出し、素の番地へ移動する。
+   \item Bの値を1減らす。
+   \item 今回DEC Bの演算結果が0ではないため、8008番地へと移動。
+   \item BCの値をスタックに退避させる。
+   \item 現在の番地をスタックに退避させた後、8013番地へと移動。
+   \item CALL前の番地を一旦、DEへ退避。
+   \item BCにB000番地の内容を代入。
+   \item HLにBCの値を加える。
+   \item CALL前にスタックに退避させていたBCの値を取り出し、再度BCに代入。
+   \item 一旦DEに退避させていたCALL前の番地をスタックに保存。
+   \item スタックにあるCALL前の番地を呼び出し、素の番地へ移動する。
+   \item Bの値を1減らす。
+   \item 今回DEC Bの演算結果が0であるため8008番地へは移動しない。
+   \item 801C番地へ移動。
+   \item C000番地にHLの値を代入。
+   \end{enumerate}
    
   
   \subsection{実験課題3.入出力制御}
   
    \subsubsection{実験課題3-1.スイッチ入力とLEDの制御}
    
+   表\ref{tab:kekka3-1}にスイッチ入力とLED出力の制御実験結果を示す。
+   
+   \begin{table}[htb]
+  \begin{center}
+    \caption{スイッチ入力に対するLED出力の制御実験の結果}
+    \begin{tabular}{|c|c|c|c|c|} \hline
+SW0 ～ SW7 & Aレジスタ & Cレジスタ & フラグ & PCレジスタ \\ \hline
+11111111 & 00 & 30 &  & 7000 \\ \hline
+01010101 & 55 & 30 & ZN & 700E \\ \hline
+    \end{tabular}
+    \label{tab:kekka3-1}
+  \end{center}
+ \end{table}
    
    \subsubsection{実験課題3-2.スピーカの制御}
    
+   スピーカの制御実験内容より、私の耳に聞こえる音の範囲を調べてみると4.76Hz～17.5kHzの範囲となった。
    
   
   
@@ -169,34 +377,160 @@ OWARI: & NOP &  & ;ブレークポイント設定位置 \\
  \section{考察}
   
   \subsection{考察課題2.Z80の演算命令、フラグ、条件分岐及びサブルーチン実行時の観察}
-   \subsubsection{考察課題2-1.テストプログラムによる動作検証}
-   
-   
    \subsubsection{考察課題2-2.演算命令及びフラグの観察}
+   
+   まず各課題に設けた考察課題の設問を下に示す。
+   
+   考察課題。
+   \begin{enumerate}
+   \item 準備課題において、逆アセンブラの結果及び実行結果等に間違いがあれば、その命令及び間違いを解析したうえ、その理由を詳細に述べよ。
+   \item フラグレジスタの値及びAレジスタの値と関連付け、命令の動作解析例にしたがってステップ毎に説明せよ。なお、各々の命令の実行結果に基づいてS.Z.P/V,Cフラグの解析を必ず行うこと。
+   \end{enumerate}
+   
+   これを受けて、以下、解答を示す。
+   \begin{enumerate}
+   \item 表\ref{tab:kekka2-2}で示した実験データの実験内容で述べた内容との2点の違いについて。1.SET 7,Aにおいて、論理演算で偶数パリティとなっているためPフラグが立っている。2.RLC Aにおいて、6ビット目の数が7ビット目に入ることで最上位ビットが1に、つまりSフラグが立っている。どちらも私たちの班が事前の予想ができていなかったミスによる。
+   \item 見やすさのために実験結果を示す表\ref{tab:kekka2-2}のすぐしたに各命令のトレース結果を載せた。実験結果2-2を参照。
+   \end{enumerate}
    
    
    \subsubsection{考察課題2-3.フラグ、条件分岐及びサブルーチン実行時の観察}
    
+   実験課題2-3の結果考察項目をまず示す。
+   \begin{enumerate}
+   \item フラグレジスタの値及び各レジスタの値との関連をつけて、命令の動作解析例にしたがってステップ毎に説明せよ。なお、メモリが使用されている命令において、使用されている番地及びそのメモリ内容の値についても言及して解析する。
+   \item 実行を開始してから終了するまでに実行された命令数。また、実行された命令のプログラムカウンタの値を順番に書く。
+   \item このプログラムの動作を詳細に説明せよ。LD B,2の命令をLD B,3やLD B,4に変える演算結果がどう変わるか?
+   \item プログラム5行めのPUSH BC命令の使用目的及びその理由を詳細に説明せよ。
+   \item プログラム10行めのPOP DE命令の使用目的及びその理由を詳細に説明せよ
+   \item プログラム13行めのPOP BC命令の使用目的及びその理由を詳細に説明せよ。
+   \item プログラム14行めのPUSH DE命令の使用目的及びその理由を詳細に説明せよ。
+   \item プログラムの終了時のメモリのC000H番地及びC001H番地の値を16進数、符号なし10進数また符号付き10進数で示せ。
+   \item Zフラグと命令「JP NZ, nnnn」の実行結果の関係について詳細に述べよ。
+   \item Zフラグを変化させる可能性のあるすべての命令とZフラグが「立つ」条件を調べて列挙せよ。
+   \end{enumerate}
    
+   そして次にこの考察課題に解答する。
+   \begin{enumerate}
+   \item 見やすさのために、「実験課題2-3」の実験データのすぐ下にトレース結果を示した。
+   \item 実行命令数は25。またプログラムカウンタの値は表\ref{tab:kekka2-3}を参考にして8003,8006.8008.8009.8013.8014.8018.8019,801A,801B,800C.800D.8010.801C.801Fとなる。
+   \item まずこのプログラムの動作について。このプログラムはB000H番地に最初に代入した値をBの数倍にする、という計算である。
+   
+   したがって例えばLD B,3に変えるとA8A8の3倍であるため1F9F8。ただし最上位の1はキャリーとなるため最終的な出力はF9F8。
+   
+   またLD B,4だと、A8A8の4倍で2C2A0、ただし最上位の2は桁上がりとして、最終的な出力はC2A0。
+   \item 目的は、BCをスタックに退避させること。
+   
+   理由は、KEISAN中でBCにB000の値を代入しなければいけないため。
+   \item 目的は、スタックに最後に代入した番地を、一旦取り出すこと。
+   
+   理由は、最後から2番目にスタックに代入されていたBCの値を取り出すため。
+   \item 目的は、スタックに退避させていたBCの値を取り出すこと。
+   
+   理由は、B000番地の値を倍々していくループの回数として元のBCの値が必要になるため。
+   \item 目的は、DEに一時的に退避させていたCALL前の戻り番地をスタックに保存すること。
+   
+   理由は、CALL前に戻るために戻り番地がスタックにある必要があるため。
+   \item 
+   
+   \begin{eqnarray}
+   C000H &=& 5150 (16進数) \nonumber \\
+                 &=& 20816 (符号なし10進数) \nonumber \\
+                 &=& 20816 (符号あり10進数) \nonumber
+   \end{eqnarray}
+   
+   \item Zフラグが立っている場合、nnnn番地へ移動しない。
+   
+   Zフラグが立っていない場合、nnnn番地へ移動する。
+   \item 
+   Zフラグを変化させる可能性のある命令とZフラグが立つ条件を、表\ref{tab:kousatu2-3}に示す。ただし、この表中のBレジスタは任意に設定できるレジスタとして便宜上用いている。
+   
+   \begin{table}[htb]
+  \begin{center}
+    \caption{Zフラグを変化させる可能性のある命令とZフラグが立つ条件}
+    \begin{tabular}{c|c} 
+命令 & 条件 \\ \hline
+DEC B & Bが0になる \\
+PUSH B & SPが0になる \\
+CALL B & SPが0になる \\
+    \end{tabular}
+    \label{tab:kousatu2-3}
+  \end{center}
+ \end{table}
+   
+   \end{enumerate}
+  
   
   \subsection{考察課題3.入出力制御}
   
    \subsubsection{考察課題3-1.スイッチ入力とLEDの制御}
    
+   表\ref{tab:kekka3-1}にある結果の解析をここに示す。
+   
+   この表の結果より、入力スイッチのデータが55H(表下段の2進数01010101の16進表記)でない場合、データ入力からループを繰り返し続ける。またにゅ力スイッチのデータの内容が55Hの場合、Zフラグが立ってENDへと移動する。
+   
+   すなわち、このプログラムは30Hが55Hになるまで終了することがない、ということになる。
    
    \subsubsection{考察課題3-2.スピーカの制御}
    
+   まずここでもスピーカ制御の実験課題に対して設けられた考察課題の設問をはじめに示す。
+   
+   考察課題。
+   
+   \begin{enumerate}
+   \item スピーカを鳴らすプログラムの空白コメントをすべて埋めよ。
+   \item スピーカを鳴らすプログラムにしたがって、フローチャートを完成させよ。
+   \item 音が聞こえ始める音の高さの値及び聞こえなくなる音の高さに対応する周波数に基づいて、音が聞こえる周波数の帯域を算出し、音が聞こえる理由及び聞こえなくなる理由について詳細に述べよ。
+   \item パルス幅に対する音の継続時間のグラフとパルスの周波数に対する音の継続時間のグラフに基づいて、その関係が生ずる理由に関して詳細に述べよ。
+   \item スピーカに音を鳴らせる原理について考察し、プログラムの終了時にスピーカのコイルに電流を流しっぱなしになってしまうことにならないようにするにはどのようにすればよいかを考察しその理由について詳細に述べよ。
+   \item スピーカを鳴らすプログラムの各々のサブルーチン及びメインプログラムの動作を詳細に解析し、プログラム全体の動作を詳細に述べよ。また、WAITサブルーチンにおいて、決められた回数でループすることができる理由を述べよ。
+   \item MAINプログラムのPUSH AF, PUSH BC, POP BC, POP AF命令の使用目的とその理由について詳細に解析して考察せよ。
+   \end{enumerate}
+   
+   これを踏まえて、以下で設問に解答する。
+   
+   \begin{enumerate}
+   \item 結果中の表\ref{tab:tejun3-2}に示している。
+   \item プログラムの挙動を示したフローチャートは付録の図　に示す。
+   \item 今回の実験では決まった音の長さでその聞こえる周波数の範囲を求めたが、音の長さが充分でないと聞こえなくなったり、また高い周波数だと聞こえる周波数の境界線が明確だが低い周波数だとその境界線は曖昧になってしまうという事実が実験中確認できた。このことからも、今回のパルス波を正弦波の合成だと見た場合、高周波はエッジが鋭くなるため聞こえなくなるタイミングが明白だが、逆に低周波だと波の強度の減衰が緩やかであるために聞こえなくなるタイミングが曖昧なのだと考えられる。すなわち、人間にとって小さな波の強度でも聞き取ることが出来、周波数成分は減衰の挙動を変動させているだけだと考える。
+   \item 音のパルス幅におよび周波数に対する継続時間の関係をそれぞれ図　、　に示す。なお、図中の判例は音の長さの初期値の１６進数表示である。まずパルス幅が大きくなると、その継続時間は大きくなる。これは両者の次元が等しいためわかり、周波数に関しては逆に周波数が大きくなると継続時間が小さくなる。これもパルス幅と周波数が反比例の関係にあることからわかる。
+   \item スピーカには複数のonになる入力の数だけ電圧を増加させていく仕組みである。on,offの切り替えのためにダイオードが使われているためにある程度、明確な境界線が実現できている。しかし、さらにon,offの切り替えのエッジを鋭くし、漏れをなくすためにはオペアンプを用いることで実現することもできる。
+   \item プログラムの動作を解析するために、細かいサブルーチンに分けてそれぞれの挙動を確認していく。
+   
+   WAITルーチンでは入力された各パルス幅が出力される間繰り返し待機するという関数。またWAIT2行めのPEはP/Vが1のときに1になる関数であるため、CPDによる演算が1ビットずつ論理演算を繰り返していることから明確に決められた回数でループすることが出来る。
+   
+   OTODASU関数はWAIT関数に各パルス幅の待機処理を渡しつつ1周期分の音が1ループで出力されるようになっている。それを設定された音の長さ分カウントして繰り返している。なおWAIT関数が1パルスなのに対してOTODASU関数では設定された1周期分音を出さなければならないため、出力データセットからWAIT関数への受け渡しまでが本関数内で2度行われている。
+   
+   FUYASU関数に移動するとそのまま使用者によって設定された音の高さ、及び長さにそれぞれの増分を加算しメインプログラムに戻る、という挙動をしめす。
+   
+   こうしてMAINループでは1回実行すると設定した幅のパルスを設定長さ分だけ継続さえ、次回の実行では高さ、長さの増分だけ増加した高さ、長さの音を発生させるという動作を示す。
+   \item 
+
+・PUSH AF：目的は、現在の残り繰り返し回数をスタックに退避させること。理由は、OTODASU関数の中で別の用途でAFが使用されるため。
+
+・PUSH BC：目的は、音の長さの初期値をスタックに退避させること。理由は、OTODASU関数の中で別の用途でBCが使用されるため。
+
+・POP BC:目的は、スタックに退避させていた音の長さの初期値を取り出すため。理由は、OTODASU関数を抜けた時にFUYASU関数で長さの初期値を使用するため。
+
+・POP AF:目的は、スタックに退避させていた現在の音の繰り返し回数を取り出すため。理由は、OTODASU関数のループ回数のカウンターの役割をAFが果たすため。
+   \end{enumerate}
    
   
   
 % まとめ
  \section{おわりに}
   
+  今回の実験では大きく分けて2つのことについて実験を行った。つまり、Z80コンピュータシステムを用いて演算処理や条件分岐の際にレジスタやメモリがどのように使用されているかを観察すること、またスイッチ入力に対するLED出力を制御すること、及び周波数入力に対するスピーカ出力の制御をもって入出力制御を観察すること、の2つである。
   
+  この実験を通して、スタックがメモリの一部をもってなされているシステムであるということや、条件分岐の際のレジスタやスタックの値の退避のタイミング、また全体を通してアセンブリの理解につながったと考えている。
+  
+  今回の実験では大きく分けて2のことについて実験を行った。つまり、Z80コンピュータシステムを用いて演算処理や条件分岐の際にレジスタやメモリがどのように使用されているかを観察すること、またスイッチ入力に対するLED出力を制御すること、及び周波数入力に対するスピーカ出力の制御をもって入出力制御を観察すること、の2つである。
+  
+  この実験を通して、スタックがメモリの一部をもってなされているシステムであるということや、条件分岐の際のレジスタやスタックの値の退避のタイミング、また全体を通してアセンブリの理解につながったと思っている。 
   
 % 参考文献の列挙
  \section{参考文献}
-  
+  ・雨宮好文,「現代電子回路学[2]」,オーム社
   
   
 \end{document}
