--- a/tex/S3_L/S3_L_AnalogCircuit2/S3_L_AnalogCircuit2.tex
+++ b/tex/S3_L/S3_L_AnalogCircuit2/S3_L_AnalogCircuit2.tex
@@ -19,13 +19,13 @@
   
   %レベルシフタ
  \section{レベルシフタ}
-  \subsection{原理}
+  \subsection{原理}[1]
    
    今回使用するレベルシフタの回路を図\ref{fig:levelshifter}に、また理想的なレベルシフタで実現される原理グラフを図\ref{fig:risou_levelshifter}に示す。
    
    またこの理想的なレベルシフタの$V_i$に対する$V_o$の挙動は以下の式で表すことが出来る。
    \begin{equation}
-   V_o = \frac{5}{3} V_i - 10
+   V_o = \frac{5}{3} V_i - 10 \label{equ:1}
    \end{equation}
    
    \begin{figure}[htbp]
@@ -53,6 +53,8 @@
   \subsection{結果と考察} \label{sec:le_kousatu}
   レベルシフタの動作結果を図\ref{fig:1_0}に示した。この図を見ると、0～12Vの正の入力に対して、-10～10Vの一定の幅を持った正負の出力範囲が得られていることが分かる。したがってこれはレベルシフタとしての動作を反映していることを示し、さらに入力電圧に対して線形関数的に出力電圧が得られるため、以降実験の入力としてこの出力電圧を扱うに当たって、レベルシフタは非常に実験者からみても安定的で有効な回路である、ということが分かった。
   
+  また、理想的なレベルシフタの原理グラフと比較してみても、測定グラフの原理グラフとの乖離はなく、実際測定グラフは式\ref{equ:1}の入出力挙動を、つまり入力が0～12Vに対して線形敵に出力が-10～10Vの間で変化している。
+  
    \begin{figure}[htbp]
   \centering
   \includegraphics[width=8cm,clip]{1_0.png}
@@ -60,19 +62,64 @@
   \label{fig:1_0}
  \end{figure}%
    
+   ところで今回扱ったレベルシフタは非反転型と呼ばれるものであるが、ここで反転型のレベルシフタについても少し述べておく。
+   
+   図\ref{fig:reverse}に反転型レベルシフタの回路図を示す。この回路図で本実験の非反転型レベルシフタと同範囲の出力を表現する場合には
+   \begin{equation}
+   V_o = -\frac{5}{3} V_i + 10
+   \end{equation}
+   となる設計を行う必要がある。
+   
+   すなわち図中の$R_{t4}$と$V_X$の値を考えると、
+   \begin{eqnarray}
+   V_i - V_X &=& 12I \nonumber \\
+   V_i - V_o &=& 32I \nonumber
+   \end{eqnarray}
+   より、
+   \begin{eqnarray}
+   12(V_i - V_o) &=& 32 (V_i - V_X) \nonumber \\
+   V_o &=& -\frac{5}{3} V_i + \frac{8}{3} V_X \nonumber
+   \end{eqnarray}
+   となる。よって、
+   \begin{eqnarray}
+   \frac{8}{3} V_X &=& 10 \nonumber \\
+   V_X &=& 3.75 \verb|V| \nonumber
+   \end{eqnarray}
+   であり、ゆえに$R_{t3}$は次のようになる。
+   \begin{eqnarray}
+   V_X - 0 &=& 15 * \frac{12}{R_{t3} +12} \nonumber \\
+   R_{t3} &=& 36 \verb|k| \Omega \nonumber
+   \end{eqnarray}
+   
+   \begin{figure}[htbp]
+  \centering
+  \includegraphics[width=8cm,clip]{reverse_levelshifter.png}
+  \caption{反転型レベルシフタ}
+  \label{fig:reverse}
+ \end{figure}
+   
    \clearpage
    
    %リミッタ
  \section{リミッタ}
   \subsection{オペアンプを用いないリミッタの入出力特性}
-   \subsubsection{原理}
+   \subsubsection{原理}[1]
     
-    図\ref{fig:noamp_tokusei}にオペアンプを用いないリミッタ回路を示す。
+    図\ref{fig:noamp_tokusei}にオペアンプを用いないリミッタ回路を示す。ただし、ここで各抵抗の値を
+    \begin{itemize}
+    \item $R_{S1}$=14.88k$\Omega$
+    \item $R_{S2}$= 9.89k$\Omega$
+    \item $R_{P}$=9.89k$\Omega$
+    \item $R_{1}$=10.14k$\Omega$
+    \end{itemize}
+    としている。
+    
     
     原理的に理想的なリミッタ回路は以下の2点の特性を示す。
     \begin{itemize}
-    \item $V_i > 0$の時、$V_o = V_i$V。
-    \item $V_i < 0$の時、$V_o = 0$V。
+    \item $V_i > 0$の時、$V_o = V_i$ V。
+    \item $V_i < 0$の時、$V_o = 0$ V。
+    \item 周波数依存性がない。
     \end{itemize}
     したがって理想的なリミッタの挙動は図\ref{fig:risou_limitter}に示すような形をとり、またそのグラフは以下の式で表される。
     
@@ -96,6 +143,14 @@
   \caption{理想的なリミッタの原理グラフ}
   \label{fig:risou_limitter}
  \end{figure}
+ 
+  また図\ref{fig:noamp_tokusei}のダイオードにかかる電圧$V_D$と電流$I_D$は、以下の換算式から求めることができる。このリミッタ特性からダイオード特性への換算式は以降、オペアンプを用いないリミッタ、及びオペアンプを用いたリミッタの考察において使用する。
+  
+  \begin{eqnarray}
+  V_D &=& - V_o \label{equ:6} \\
+  I_D &=& \frac{V_o - V_i}{R_1} \label{equ:7}
+  \end{eqnarray}
+    
     
     
    \subsubsection{測定手順}
@@ -105,7 +160,7 @@
     \item レベルシフタによる変換後の入力$V_i$を(-4V～+4V)の範囲で変動させながら、出力$V_o$を測定。
     \end{enumerate}
     
-   \subsubsection{結果と考察}
+   \subsubsection{結果と考察} \label{sec:noamp_tokusei}
     図\ref{fig:1_1_noamp_PS}にオペアンプを用いないリミッタの入出力特性を示す。
     この図を見ると、入力電圧が正の時は傾きが1の線形特性、入力電圧が負の時は0に近い一定の負の出力が得られることが分かる。リミッタ回路の特性上、入力が負の場合には回路上のダイオードに正のバイアスが、入力が正の場合にはダイオードに負のバイアスがかかる。つまりリミッタ回路の入出力特性は以下のようにまとめることができる。
     \begin{itemize}
@@ -122,6 +177,15 @@
  \end{figure}%
     
     これでリミッタ回路の入出力特性を確認することができたわけだが、ダイオードをスイッチとして使用した例である。この図からは入力電圧が微小な負の値をもつ所から出力電圧が立ち上がり始めていることも確認できるため、ダイオードの立ち上がり電圧もデータに現れていることもわかる。
+    
+    また本実験の回路図中のダイオードの電流電圧特性を図\ref{fig:b_noamp}に示す。このグラフから今回使用したダイオードが、入力が負の時出力が0、また入力が0.5～0.7Vとなったときに出力が大きくなりだす、という一般的なシリコンダイオードの入出力特性を示していることが分かる。
+    
+    \begin{figure}[htbp]
+  \centering
+  \includegraphics[width=8cm,clip]{b_noamp.png}
+  \caption{オペアンプなしリミッタにおけるダイオードの電流電圧特性}
+  \label{fig:b_noamp}
+ \end{figure}
     
   \subsection{オペアンプを用いないリミッタの入出力波形観測}
    \subsubsection{原理}
@@ -142,7 +206,7 @@
     \item 交流電源を波形(ex.正弦波、三角波)、振幅、周波数などによって変動させ、それぞれの入力に対してその出力波形を観測。
     \end{enumerate}
     
-   \subsubsection{結果と考察}
+   \subsubsection{結果と考察} \label{sec:noamp_wave}
     
     オペアンプを用いないリミッタの入出力波形を、正弦波、入力周波数、電圧によって測定した3つのサンプルデータをそれぞれ図\ref{fig:noamp_f1V2}、図\ref{fig:noamp_sankaku}、図\ref{fig:noamp_f100V4}に示す。
     
@@ -173,6 +237,8 @@
     
     したがってここから、リミッタ回路は直流利用では問題なく利用できるが、交流として利用する際には、使用する周波数帯には気をつけなければならないということが分かった。
     
+    最後にリミッタ回路を半波整流と見なしたときの平均電圧の計算を付録に掲載する。
+    
     
   \subsection{オペアンプを用いたリミッタの入出力特性}
    \subsubsection{原理}
@@ -193,7 +259,7 @@
     \item $V_i$を-4Vから+4Vまで変動させ、その出力を測定。
     \end{enumerate}
     
-   \subsubsection{結果と考察}
+   \subsubsection{結果と考察} \label{sec:amp_tokusei}
     次の図\ref{fig:1_1_amp_PS_ViVo}、図\ref{fig:1_1_amp_PS_ViVa}にそれぞれ入力電圧に対するリミッタの出力、そしてオペアンプの出力電圧特性を示した。
     
     まず図\ref{fig:1_1_amp_PS_ViVo}をみてみる。このデータは定性的には先述のオペアンプを用いない場合の入出力特性と同様に見える。しかし今回の場合はマイナス側への出力電圧の浸透がなく、さらに立ち上がり部分の0に近づいている。
@@ -204,6 +270,15 @@
     \item スイッチoff時の電圧漏れだしの防止
     \end{itemize}
     などが主にあげられる。
+    
+    また、式\ref{equ:6}、\ref{equ:7}によってリミッタの入出力特性から換算したダイオードの電流電圧特性を図\ref{fig:b_amp}に示す。この電流電圧特性は前述のリミッタ特性と同様に、オペアンプを用いない場合に比べてスイッチングのエッジが鋭くなっている。つまり、この仮想ダイオードの閾値が0V、かつ極めて小さな入力の変化で出力が大きくなっている。ここからオペアンプを用いることによる、ダイオードの入出力特性による順方向の閾値を負に増幅(小さくする)し、スイッチとしての機能を向上させていることがわかる。
+    
+    \begin{figure}[htbp]
+  \centering
+  \includegraphics[width=8cm,clip]{b_amp.png}
+  \caption{オペアンプありリミッタにおけるダイオードの入出力特性}
+  \label{fig:b_amp}
+ \end{figure}
     
     \begin{figure}[htbp]
   \centering
@@ -239,10 +314,16 @@
     \item 交流電源を波形(ex.正弦波、三角波)、振幅、周波数などによって変動させ、それぞれの入力に対してその出力波形を観測。
     \end{enumerate}
     
-   \subsubsection{結果と考察}
+   \subsubsection{結果と考察} \label{sec:amp_wave}
     図\ref{fig:ampFGf1v2vivo},\ref{fig:ampFGf1v2viva}に正弦波で周波数1kHzの入力に対するデータを、図\ref{fig:ampFGf1v4vivo},\ref{fig:ampFGf1v4viva}に三角波で周波数1kHzの入力に対するデータを、そして最後の図\ref{fig:ampFGf100v4}に正弦波で周波数1kHzの入力に対するデータを示す。
     
     ここでも上述の入出力特性に関する特性と同様に、周波数が1kHzで低い状態ではその挙動はオペアンプなしと変わらない。
+    
+    ただし、高周波数、つまり100kHzになると振幅の減衰と位相の遅延が確認できる。理想的なリミッタでは遅延などはなく、入力値と出力値は1対1に対応しているはずである。
+    
+    ここで考えられるのはダイオードの空乏層容量による仮想的なコンデンサーである。このコンデンサーにより電子の伝送に遅延があり、またそのコンデンサーとしてのダイオードに電子が蓄積していくためにエネルギーの保存から出力側にかかる電圧値が小さくなっているものだといえる。[2]
+    
+    最後にリミッタ回路を半波整流と見なしたときの平均電圧の計算を付録に掲載する。
     
     \begin{figure}[htbp]
   \centering
@@ -285,7 +366,7 @@
   %ヒステリシスコンパレータ回路
  \section{ヒステリシスコンパレータ回路}
   \subsection{ヒステリシスコンパレータの入出力特性}
-   \subsubsection{原理}
+   \subsubsection{原理}[1]
     
     図\ref{fig:histeri_tokusei}にヒステリシスコンパレータの測定回路を、また理想的なヒステリシスコンパレータの原理グラフを図\ref{fig:risou_histeri}に示す。ただし図\ref{fig:risou_histeri}中に記している電圧値及び電流値は便宜上、仮に設定したものである。
     
@@ -359,7 +440,7 @@
     \item 通常コンパレータについて、2の操作を同様に行う。
     \end{enumerate}
     
-   \subsubsection{結果と考察}
+   \subsubsection{結果と考察} \label{sec:histeri}
     
     図\ref{fig:histeri_2-1}～\ref{fig:histeri_1-1}には基本波形観測の波形データを、図\ref{fig:noise_before_6-1_big}～\ref{fig:noise_after_6-1_small}にはノイズ波形観測の波形データをそれぞれ示す。
     
@@ -384,7 +465,7 @@
   \label{fig:histeri_1-1}
  \end{figure}
  	
- 	まずのノイズのない波形を見る。理想的なヒステリシスコンパレータではその入出力特性から
+ 	まずのノイズのない波形を見る。理想的なヒステリシスコンパレータではその入出力特性から周期内の立ち上がり及び立ち下がりにおいて同程度の大きさの振れ幅で1周期振動して元の大きさに戻る。上記のPSが2Vの時の2つのデータはそのような挙動を示しているが、しかし、PSが1Vの時のデータでは負の方向により大きく振動していることが確認できる。これはPSと直結したオペアンプにかかる電圧が小さなPS電源と$R_4$によって小さくなり、その出力先のダイオードの空乏層容量によって正と負の出力に差が生じているのだと考えられる。
  	
  \begin{figure}[htbp]
   \centering
@@ -422,6 +503,14 @@
  \end{figure}
     
     
+    
+    また、ヒステリシスコンパレータによるノイズが含まれている波形の閾値処理について考える。上記のノイズを含む波形観測のデータからヒステリシスコンパレータの方がその入力値が閾値を越えることによる出力のデジタル的な返歌を利用して低振幅のノイズを除去することができていることがわかる。つまりヒステリシスコンパレータの入力の閾値がそのコンパレータのヒステリシス幅と言えるが、ノイズ除去の性能はこのヒステリシス幅によっても変動する。ヒステリシスの幅より振幅の小さい信号が除去されることになるが、ここには利点と欠点が存在する。
+    
+    ヒステリシス幅を大きくする利点は、より振幅が大きくなったノイズも除去することができるという点である。閾値を大きくすることで除去できるノイズの最大振幅をあげることに由来している。
+    
+    一方、その幅を大きくする際の欠点は、意味のある信号も小さな振幅部分などだと意図せず除去してしまうという点。信号とノイズの区別をしているわけではないため、両者関係なく小さな信号は除去してしまう。
+    
+    したがってヒステリシス幅はただ大きくすれば良いということではなく、伝達したい信号の振幅の大きさと相互的に調節していかなくてはいけない。
     
     
     \clearpage
@@ -463,7 +552,7 @@
     \item 基準電圧$V_r$、入力電圧$V_i$を変動させ出力電圧$V_o$の挙動を測定。
     \end{enumerate}
     
-   \subsubsection{結果と考察}
+   \subsubsection{結果と考察} \label{sec:abs_tokusei}
     
     図\ref{fig:2_Vr0}、\ref{fig:2_Vr1}にはそれぞれ基準電圧が0Vと1Vのときの絶対値回路の直流電源に対する入出力特性データを示す。
     
@@ -481,6 +570,13 @@
   \label{fig:2_Vr1}
  \end{figure}%
     
+    上記のように基準電圧を変動させることにより出力特性を変化させることができる。ただしこのデータからそのグラフの形が変化するのではなく、原点のみが移動している、ということがわかりその入出力関係は
+    \begin{eqnarray}
+    V_o &=& V_i (V_i > 1) \\
+           &=& - V_i + 2 (V_i <1)
+    \end{eqnarray}
+    という式で表される。実際この式は理想的な絶対値回路についてと同様で成り立つことである。
+        
     
     
   \subsection{絶対値回路の入出力波形測定}
@@ -502,9 +598,13 @@
     \item 基準電圧$V_r$、入力周波数、振幅、波形(ex.正弦波、三角波)による出力の変動を測定。
     \end{enumerate}
     
-   \subsubsection{結果と考察}
+   \subsubsection{結果と考察} \label{sec:abs_wave}
     
     図\ref{fig:2_Vr0_sin}～\ref{fig:2_Vr1_4}に基準電圧と振幅、波形によりそれぞれ場合分けして観測した波形データを示す。
+    
+    このデータを見てみると、その全てで基準電圧を基準として整流作用が表れていることがわかる。図\ref{fig:2_Vr1_4}などには半値整流が内容に見えるが、これはその出力の全範囲が基準電圧以上であるため入力がそのまま出力されていることになる。ただし図\ref{fig:2_Vr0_sin}などの高周波数では遅延が確認できる。これは前述のリミッタについてと同様で、ダイオードの空乏層容量によるコンデンサーとしての振る舞いが原因だと考えられる。
+    
+    またこの絶対値回路を全波整流とみなしたときの平均電圧の計算、及び気宇順電圧を1Vとした場合の出力電圧の平均値の計算を付録として掲載する。
     
     \begin{figure}[htbp]
   \centering
@@ -543,21 +643,29 @@
  \section{レポート課題} 
   \begin{itemize}
   \item a)レベルシフタの\ref{sec:le_kousatu}結果と考察、を参照。
-  \item b)
-  \item c)
-  \item d)
-  \item e)
-  \item f)
-  \item g)
-  \item h)
-  \item i)
-  \item j)
-  \item k)
+  \item b)\ref{sec:noamp_tokusei}の「オペアンプなしリミッタの入出力特性」、及び\ref{sec:amp_tokusei}の「オペアンプありリミッタの入出力特性」の「実験と考察」の項を参照。
+  \item c)\ref{sec:noamp_wave}の「オペアンプなしリミッタの入出力波形観測」の「実験と考察」の項を参照。
+  \item d)\ref{sec:amp_wave}の「オペアンプありリミッタの入出力波形観測」の「実験と考察」の項を参照。
+  \item e)\ref{sec:noamp_wave}の「オペアンプなしリミッタの入出力波形観測」の「実験と考察」の項、\ref{sec:amp_wave}の「オペアンプありリミッタの入出力波形観測」の「実験と考察」の項、及び付録を参照。
+  \item f)\ref{sec:histeri}の「ヒステリシスコンパレータの入出力波形観測」の「実験と考察」の項を参照。
+  \item g)\ref{sec:histeri}の「ヒステリシスコンパレータの入出力波形観測」の「実験と考察」の項を参照。
+  \item h)\ref{sec:abs_tokusei}の「絶対値回路の入出力特性」の「実験と考察」の項を参照。
+  \item i)\ref{sec:abs_wave}の「絶対値回路の波形観測」の「実験と考察」の項を参照。
+  \item j)\ref{sec:abs_wave}の「絶対値回路の波形観測」の「実験と考察」の項、及び付録を参照。
+  \item k)\ref{sec:abs_wave}の「絶対値回路の波形観測」の「実験と考察」の項、及び付録を参照。
   \end{itemize}
+  
+  %まとめ
+  \section{まとめ}
+  今回の実験ではアナログ回路を用いた非線形計算の実現を学習してきた。この非線形計算は単純な電卓のような計算として利用されることはなく、様々な物理的な測定、センサー、及びスイッチとして利用される。
+  
+  リミッタによる半波整流、ヒステリシスコンパレータによるノイズ除去、絶対値回路による全波整流を物理的なシステムに応用することが本実験を通して学んだエッセンスであり、次期の目的である。
   
   %参考文献
  \section{参考文献}
+  [1]雨宮好文、「現代電子回路学」、オーム社
   
+  [2]古川静二郎、「電子デバイス工学・第2版」、森北出版株式会社、p.45～50
   
   
 \end{document}
